# svgllm

./: colab_fetch_svgs.ipynb  colab_sft.ipynb  main.py  pyproject.toml
examples/: __init__.py  smoke.py
scripts/: commons_api_fetch.py  extract_inline_svg.py  extract_svgs.py  merge_svgs.py  sanity_check.py  train_sft_llava.py
svgllm/: __init__.py  renderer.py  reward.py
svgllm/data/: svg_dataset.py
